# phxpaxos

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  MANIFEST  Makefile.define  README  README.md  README.win.md  README.zh_CN.md  appveyor.yml  autoinstall.sh  build.sh  common.gypi  format.sh  gyp_build.bat  gyp_build.sh  license.py  makefile.mk  phxpaxos-0.9.0.src.tgz  phxpaxos.gyp  protoc.gypi  src_list
cmake/: FindGflags.cmake  FindGlog.cmake  FindGmock.cmake  FindGrpc.cmake  FindGtest.cmake  FindLeveldb.cmake  FindProtobuf.cmake  gRPCHelper.cmake
include/: Makefile.define
include/phxpaxos/: breakpoint.h  def.h  log.h  network.h  node.h  options.h  sm.h  storage.h
plugin/: CMakeLists.txt  Makefile.define
plugin/include/: Makefile.define
plugin/include/phxpaxos_plugin/: logger_google.h  monitor.h
plugin/logger_google/: Makefile.define  logger_google.cpp  logger_google_impl.cpp  logger_google_impl.h
plugin/monitor/: Makefile.define  monitor.cpp  monitor_bp.cpp  monitor_bp.h
port/: port.h  port_win.cpp  port_win.h
port/win/: dirent.c  dirent.h  poll.cpp  poll.h  unistd.c  unistd.h
port/win/netinet/: tcp.h
port/win/sys/: epoll.cpp  epoll.h  socket.cpp  socket.h  time.cpp  time.h
sample/: CMakeLists.txt
sample/phxecho/: CMakeLists.txt  Makefile.define  README  echo_server.cpp  echo_server.h  echo_sm.cpp  echo_sm.h  main.cpp  run_echo.sh
sample/phxelection/: CMakeLists.txt  Makefile.define  README  election.cpp  election.h  election_main.cpp  run_election_sample.sh
sample/phxkv/: CMakeLists.txt  Makefile.define  README  client_tools_sample.sh  def.h  kv.cpp  kv.h  kv_grpc_client.cpp  kv_grpc_client.h  kv_grpc_client_main.cpp  kv_grpc_server.cpp  kv_grpc_server.h  kv_grpc_server_main.cpp  kv_paxos.cpp  kv_paxos.h  kvsm.cpp  kvsm.h  log.cpp  log.h  phxkv.grpc.pb.cc  phxkv.grpc.pb.h  phxkv.pb.cc  phxkv.pb.h  phxkv.proto  prepare_dir.sh  run_server_sample.sh  utils.cpp  utils.h
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt  Makefile.define  acceptor.cpp  acceptor.h  base.cpp  base.h  checkpoint_receiver.cpp  checkpoint_receiver.h  checkpoint_sender.cpp  checkpoint_sender.h  commitctx.cpp  commitctx.h  committer.cpp  committer.h  instance.cpp  instance.h  ioloop.cpp  ioloop.h  learner.cpp  learner.h  learner_sender.cpp  learner_sender.h  msg_counter.cpp  msg_counter.h  proposer.cpp  proposer.h
src/benchmark/: CMakeLists.txt  HOW_TO_BENCH  Makefile.define  bench_db.cpp  bench_main.cpp  bench_server.cpp  bench_server.h  bench_sm.cpp  bench_sm.h  fsync_bench.cpp
src/checkpoint/: CMakeLists.txt  Makefile.define  cleaner.cpp  cleaner.h  cp_mgr.cpp  cp_mgr.h  replayer.cpp  replayer.h
src/comm/: CMakeLists.txt  Makefile.define  breakpoint.cpp  comm_include.h  commdef.h  inside_options.cpp  inside_options.h  logger.cpp  logger.h  msg_transport.h  options.cpp  paxos_msg.pb.cc  paxos_msg.pb.h  paxos_msg.proto
src/communicate/: CMakeLists.txt  Makefile.define  communicate.cpp  communicate.h  dfnetwork.cpp  dfnetwork.h  network.cpp  udp.cpp  udp.h
src/communicate/tcp/: CMakeLists.txt  Makefile.define  event_base.cpp  event_base.h  event_loop.cpp  event_loop.h  message_event.cpp  message_event.h  notify.cpp  notify.h  notify_win.cpp  tcp.cpp  tcp.h  tcp_acceptor.cpp  tcp_acceptor.h  tcp_client.cpp  tcp_client.h
src/config/: CMakeLists.txt  Makefile.define  config.cpp  config.h  config_include.h  inside_sm.h  system_v_sm.cpp  system_v_sm.h
src/logstorage/: CMakeLists.txt  Makefile.define  db.cpp  db.h  log_store.cpp  log_store.h  paxos_log.cpp  paxos_log.h  system_variables_store.cpp  system_variables_store.h
src/master/: CMakeLists.txt  Makefile.define  master_damon.cpp  master_damon.h  master_mgr.cpp  master_mgr.h  master_sm.cpp  master_sm.h  master_sm.pb.cc  master_sm.pb.h  master_sm.proto  master_variables_store.cpp  master_variables_store.h
src/node/: CMakeLists.txt  Makefile.define  group.cpp  group.h  node.cpp  pnode.cpp  pnode.h  propose_batch.cpp  propose_batch.h  test_propose_batch.cpp
src/sm-base/: CMakeLists.txt  Makefile.define  sm.cpp  sm_base.cpp  sm_base.h
src/test/: CMakeLists.txt  Makefile.define  test_main.cpp  test_server.cpp  test_server.h  test_sm.cpp  test_sm.h
src/test1/: CMakeLists.txt  test_server.cpp  test_server.h  test_sm.cpp
src/tools/: CMakeLists.txt  Makefile.define  paxos_log_tools.cpp  run_svm_tools.sh  system_variables_tools.cpp  vfile_fetch.cpp
src/ut/: CMakeLists.txt  Makefile.define  acceptor_ut.cpp  db_ut.cpp  make_class.cpp  make_class.h  mock_class.h  nodeid_ut.cpp  proposer_ut.cpp  timer_ut.cpp  ut_main.cpp  wait_lock_ut.cpp
src/utils/: CMakeLists.txt  Makefile.define  bytes_buffer.cpp  bytes_buffer.h  concurrent.cpp  concurrent.h  crc32.cpp  crc32.h  notifier_pool.cpp  notifier_pool.h  serial_lock.cpp  serial_lock.h  socket.cpp  socket.h  timer.cpp  timer.h  util.cpp  util.h  utils_include.h  wait_lock.cpp  wait_lock.h
tools/: build_comm.py  check_install.py  create_makefile.py
